Landing page fixing responsive/overlap

--- a/src/components/PartSolution/style.css
+++ b/src/components/PartSolution/style.css
@@ -268,6 +268,10 @@
         height: auto;
     }
 
+    .mainTitle {
+        margin-top: 150px;
+    }
+
     .role-list {
         flex-wrap: wrap;
         width: 100%;
